[feat] Add Granger Causality Test Summary Table
Add Granger Causality Test summary table with formula as a table

--- a/granger_causality_tuto.ipynb
+++ b/granger_causality_tuto.ipynb
@@ -21,6 +21,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Granger Causality Test Structure**\n",
+    "|Model Category|Regression Formula|Coefficients|Walt Test|\n",
+    "|:---|---:|---:|---:|\n",
+    "|Restricted|$$y_t = c_1 + \\sum_{i=1}^{p}\\alpha_{1,i}\\ y_{t-i} + \\epsilon_{1, t},\\\\ where\\ p\\ is\\ time\\ lag$$|$$\\beta_{1}=\\beta_{2}=\\beta_{3}=0$$|Null hypothesis|\n",
+    "|Unrestricted|$$y_t = c_2 + \\sum_{i=1}^{p}\\alpha_{2,i}\\ y_{t-i} + \\sum_{i=1}^{p}\\beta_{i}\\ x_{t-i} + \\epsilon_{2, t},\\\\ where\\ p\\ is\\ time\\ lag$$|$$At\\ least\\ one\\ of\\\\ \\beta_{1},\\ \\beta_{2},\\ \\beta_{3}\\ is\\ not\\ 0$$|Alternative hypothesis|\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load packages"
    ]
   },
@@ -408,11 +420,6 @@
     "* https://intothedata.com/02.scholar_category/timeseries_analysis/granger_causality/\n",
     "* https://www.aptech.com/blog/introduction-to-granger-causality/"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
