[feat] Add automatic search for best VAR time lag
* Add automatic search for best VAR model time lag
	* Select best VAR time lag by AIC
	* If best VAR time lag is 0, select pre-fix lag
		* Pre-fix lag is set as 6

--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,6 @@
     "import matplotlib as mpl\n",
     "import yfinance as yf\n",
     "import seaborn as sns\n",
-    "import missingno as msno\n",
     "import warnings\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
@@ -104,7 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_var = VAR(df_core)"
+    "mdl_var = VAR(df_core)\n",
+    "var_max_lag = 6\n",
+    "best_lag = mdl_var.select_order(var_max_lag)\n",
+    "best_lag.summary()"
    ]
   },
   {
@@ -113,9 +115,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_max_lag = 4\n",
-    "rslt_var = mdl_var.fit(var_max_lag)\n",
-    "# rslt_var.summary()"
+    "if best_lag.selected_orders['aic'] == 0:\n",
+    "    var_best_lag = var_max_lag\n",
+    "else:\n",
+    "    var_best_lag = best_lag.selected_orders['aic']\n",
+    "    \n",
+    "rslt_var = mdl_var.fit(var_best_lag)\n",
+    "rslt_var.summary()"
    ]
   },
   {
@@ -135,13 +141,14 @@
    "outputs": [],
    "source": [
     "# plot - VAR model coefficients p-value\n",
-    "fig_var_pval, ax_var_pval = plt.subplots(1, 1, figsize=(24, 20))\n",
+    "fig_var_pval, ax_var_pval = plt.subplots(1, 1, figsize=(4*var_best_lag, 6*var_best_lag))\n",
     "\n",
     "heat_pval = sns.heatmap(\n",
     "    var_pval_tf_mat.T, \n",
     "    square=True, \n",
     "    ax=ax_var_pval, \n",
-    "    annot=True, \n",
+    "    annot=True,\n",
+    "    annot_kws={'fontsize':20-var_best_lag}, \n",
     "    cbar=False,\n",
     "    linecolor='grey',\n",
     "    linewidth=0.1,\n",
@@ -160,8 +167,8 @@
     "# Analyze causality between two time series variables with Granger Causality Test\n",
     "selc_granger_test = [ \n",
     "    # (feature x, feature y, time_lag)\n",
-    "    ('exchange_rate', 'kospi', 2),\n",
-    "    ('wti_crude_future', 'carbon_credit', 4)\n",
+    "    ('carbon_credit', 'natural_gas', 5),\n",
+    "    ('brent_crude_future', 'kospi', 1)\n",
     "]\n",
     "\n",
     "df_gct = pd.DataFrame(\n",
@@ -170,8 +177,11 @@
     "    dtype='object',\n",
     "    )\n",
     "df_gct = df_gct.applymap(lambda x: pd.Series(index=np.arange(1, var_max_lag+1), dtype='object'))\n",
+    "df_gct.index.name='cause'\n",
+    "df_gct.columns.name='effect'\n",
     "\n",
     "for factor_x, factor_y, time_lag in selc_granger_test:\n",
+    "    # factor x -> factor y\n",
     "    print(f'\\n[{factor_x}][t-{time_lag}] -> [{factor_y}][t]', end='')\n",
     "    df_gct.loc[factor_x, factor_y][time_lag] = grangercausalitytests(\n",
     "        df_core[[factor_y, factor_x]],\n",
@@ -179,6 +189,7 @@
     "        verbose=1\n",
     "    )\n",
     "\n",
+    "    # factor y -> factor x\n",
     "    print(f'\\n[{factor_y}][t-{time_lag}] -> [{factor_x}][t]', end='')\n",
     "    df_gct.loc[factor_y, factor_x][time_lag] = grangercausalitytests(\n",
     "        df_core[[factor_x, factor_y]],\n",
@@ -192,9 +203,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "cd7df390b7cda498a4d677b901669ae0205f984924db78ca0edbcfc58caee8df"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.13 ('krx_project')",
    "language": "python",
@@ -212,7 +220,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "dc46f5c985e1657c3c539eac54ec99c251674c631c2e2f1610b325c9a4de2172"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
