[feat] Update EDA (Data Change, visualize detail update)
* Change EDA data
	* Save 4 preprocessed dataset as .csv
* Visualization update
	* Change visualization code with custom functions
	* Add stationarity guide in the axes title

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -76,9 +76,15 @@
    "outputs": [],
    "source": [
     "def to_date_inv(df):\n",
-    "    df[\"날짜\"] = pd.to_datetime(df[\"날짜\"], format = \"%Y년 %m월 %d일\")\n",
-    "    df = df.sort_values(by = \"날짜\", ascending=True)\n",
-    "    df.set_index(\"날짜\", inplace=True)\n",
+    "    try:\n",
+    "        df[\"날짜\"] = pd.to_datetime(df[\"날짜\"], format = \"%Y년 %m월 %d일\")\n",
+    "        df = df.sort_values(by = \"날짜\", ascending=True)\n",
+    "        df.set_index(\"날짜\", inplace=True)\n",
+    "    except:\n",
+    "        df['일자'] = pd.to_datetime(df['일자'], format='')\n",
+    "        df = df.sort_values(by = \"일자\", ascending=True)\n",
+    "        df = df.rename(columns={'일자': '날짜'})\n",
+    "        df.set_index(\"날짜\", inplace=True)\n",
     "\n",
     "    return df\n",
     "\n",
@@ -113,16 +119,27 @@
     "snp500 = yf.Ticker('^GSPC')\n",
     "snp500.history(period='max')\n",
     "\n",
+    "# Get carbon credit data\n",
+    "path_kau19 = 'data/external_data/KAU19-22/KAU19.csv'\n",
+    "path_kau20 = 'data/external_data/KAU19-22/KAU20.csv'\n",
+    "path_kau21 = 'data/external_data/KAU19-22/KAU21.csv'\n",
+    "path_kau22 = 'data/external_data/KAU19-22/KAU22.csv'\n",
+    "\n",
     "# Get data path from local directory\n",
-    "path_brent_crude_future = 'data/external_data/브렌트유 선물 내역.csv'\n",
-    "path_wti_crude_future = 'data/external_data/WTI유 선물 내역.csv'\n",
-    "path_natural_gas = 'data/external_data/천연가스 선물 내역.csv'\n",
-    "path_kospi = 'data/external_data/코스피지수 내역.csv'\n",
-    "path_carbon_credit = 'data/external_data/탄소배출권 선물 내역.csv'\n",
-    "path_exchange_rate = 'data/external_data/EUR_KRW 내역.csv'\n",
-    "path_gold = 'data/external_data/금 선물 내역.csv'\n",
-    "path_nickel = 'data/external_data/니켈 선물 내역.csv'\n",
-    "path_use_corn = 'data/external_data/미국 옥수수 선물 내역.csv'"
+    "path_brent_crude_future = 'data/external_data/Features/브렌트유 선물 내역.csv'\n",
+    "path_wti_crude_future = 'data/external_data/Features/WTI유 선물 내역.csv'\n",
+    "path_natural_gas = 'data/external_data/Features/천연가스 선물 내역.csv'\n",
+    "path_kospi = 'data/external_data/Features/코스피19-22.csv'\n",
+    "path_kosdaq = 'data/external_data/Features/코스닥19-22.csv'\n",
+    "path_eur_krw = 'data/external_data/Features/EUR_KRW 내역.csv'\n",
+    "path_usd_krw = 'data/external_data/Features/USD_KRW 내역.csv'\n",
+    "path_gold = 'data/external_data/Features/금 선물 내역.csv'\n",
+    "path_usa_corn = 'data/external_data/Features/미국 옥수수 선물 내역.csv'\n",
+    "path_nikkei = 'data/external_data/Features/닛케이19-22.csv'\n",
+    "path_dax = 'data/external_data/Features/독일DAX19-22.csv'\n",
+    "path_moex = 'data/external_data/Features/러시아MOEX19-22.csv'\n",
+    "path_cac = 'data/external_data/Features/프랑스CAC19-22.csv'\n",
+    "path_treasury_yield = 'data/external_data/Features/미국 10년물 국채 금리 채권 수익율 내역.csv'"
    ]
   },
   {
@@ -131,64 +148,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load brent crude oil future data\n",
-    "df_brent_crude_fut = pd.read_csv(path_brent_crude_future)\n",
+    "# Load carbon credit dataset\n",
+    "df_kau19 = pd.read_csv(path_kau19, encoding='euc-kr', index_col=0)\n",
+    "df_kau20 = pd.read_csv(path_kau20, encoding='euc-kr', index_col=0)\n",
+    "df_kau21 = pd.read_csv(path_kau21, encoding='euc-kr', index_col=0)\n",
+    "df_kau22 = pd.read_csv(path_kau22, encoding='euc-kr', index_col=0)\n",
+    "\n",
+    "# Load dataset\n",
+    "df_brent_crude_fut = pd.read_csv(path_brent_crude_future).dropna()\n",
+    "df_wti_crude_fut = pd.read_csv(path_wti_crude_future).dropna()\n",
+    "df_natural_gas = pd.read_csv(path_natural_gas).dropna()\n",
+    "df_kospi = pd.read_csv(path_kospi, encoding='euc-kr').dropna()\n",
+    "df_kosdaq = pd.read_csv(path_kosdaq, encoding='euc-kr').dropna()\n",
+    "df_eur_krw = pd.read_csv(path_eur_krw).dropna()\n",
+    "df_usd_krw = pd.read_csv(path_usd_krw).dropna()\n",
+    "df_gold = pd.read_csv(path_gold).dropna()\n",
+    "df_usa_corn = pd.read_csv(path_usa_corn).dropna()\n",
+    "df_nikkei = pd.read_csv(path_nikkei, encoding='euc-kr').dropna()\n",
+    "df_dax = pd.read_csv(path_dax, encoding='euc-kr').dropna()\n",
+    "df_moex = pd.read_csv(path_moex, encoding='euc-kr').dropna()\n",
+    "df_cac = pd.read_csv(path_cac, encoding='euc-kr').dropna()\n",
+    "df_treasury_yield = pd.read_csv(path_treasury_yield).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check KAU data set\n",
+    "df_kau19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check brent crude oil future data\n",
     "df_brent_crude_fut"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load west texas crude oil future data\n",
-    "df_wti_crude_fut = pd.read_csv(path_wti_crude_future)\n",
-    "df_wti_crude_fut"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load natural gas data\n",
-    "df_natural_gas = pd.read_csv(path_natural_gas)\n",
-    "df_natural_gas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load kospi data\n",
-    "df_kospi = pd.read_csv(path_kospi)\n",
-    "df_kospi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load carbon credit data\n",
-    "df_carbon_credit = pd.read_csv(path_carbon_credit)\n",
-    "df_carbon_credit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load exchange rate data\n",
-    "df_exch_rate = pd.read_csv(path_exchange_rate)\n",
-    "df_exch_rate"
    ]
   },
   {
@@ -205,12 +205,25 @@
    "outputs": [],
    "source": [
     "# Simple dtype change : date to datetime & Close price comma fix\n",
+    "df_kau19 = dtype_chg(df_kau19)\n",
+    "df_kau20 = dtype_chg(df_kau20)\n",
+    "df_kau21 = dtype_chg(df_kau21)\n",
+    "df_kau22 = dtype_chg(df_kau22)\n",
+    "\n",
     "df_brent_crude_fut = dtype_chg(df_brent_crude_fut)\n",
     "df_wti_crude_fut = dtype_chg(df_wti_crude_fut)\n",
     "df_natural_gas = dtype_chg(df_natural_gas)\n",
     "df_kospi = dtype_chg(df_kospi)\n",
-    "df_exch_rate = dtype_chg(df_exch_rate)\n",
-    "df_carbon_credit = dtype_chg(df_carbon_credit)"
+    "df_kosdaq = dtype_chg(df_kosdaq)\n",
+    "df_eur_krw = dtype_chg(df_eur_krw)\n",
+    "df_usd_krw = dtype_chg(df_usd_krw)\n",
+    "df_gold = dtype_chg(df_gold)\n",
+    "df_usa_corn = dtype_chg(df_usa_corn)\n",
+    "df_nikkei = dtype_chg(df_nikkei)\n",
+    "df_dax = dtype_chg(df_dax)\n",
+    "df_moex = dtype_chg(df_moex)\n",
+    "df_cac = dtype_chg(df_cac)\n",
+    "df_treasury_yield = dtype_chg(df_treasury_yield)"
    ]
   },
   {
@@ -220,28 +233,103 @@
    "outputs": [],
    "source": [
     "# Concat close price of all time series data\n",
-    "df_tot = pd.concat([\n",
-    "    df_carbon_credit['종가'],\n",
-    "    df_brent_crude_fut['종가'],\n",
-    "    df_wti_crude_fut['종가'],\n",
-    "    df_kospi['종가'],\n",
-    "    df_natural_gas['종가'],\n",
-    "    df_exch_rate['종가'],\n",
+    "df_tot = pd.concat(\n",
+    "    [\n",
+    "        df_kau19['종가'],\n",
+    "        df_kau20['종가'],\n",
+    "        df_kau21['종가'],\n",
+    "        df_kau22['종가'],\n",
+    "        df_brent_crude_fut['종가'],\n",
+    "        df_wti_crude_fut['종가'],\n",
+    "        df_natural_gas['종가'],\n",
+    "        df_kospi['종가'],\n",
+    "        df_kosdaq['종가'],\n",
+    "        df_eur_krw['종가'],\n",
+    "        df_usd_krw['종가'],\n",
+    "        df_gold['종가'],\n",
+    "        df_usa_corn['종가'],\n",
+    "        df_nikkei['종가'],\n",
+    "        df_dax['종가'],\n",
+    "        df_moex['종가'],\n",
+    "        df_cac['종가'],\n",
+    "        df_treasury_yield['종가'],\n",
     "],\n",
     "axis=1)\n",
     "\n",
     "tot_col_nm = [\n",
-    "    'carbon_credit', \n",
-    "    'brent_crude_future', \n",
-    "    'wti_crude_future', \n",
-    "    'kospi', \n",
-    "    'natural_gas',\n",
-    "    'exchange_rate'\n",
+    "        'kau19',\n",
+    "        'kau20',\n",
+    "        'kau21',\n",
+    "        'kau22',\n",
+    "        'df_brent_crude_fut',\n",
+    "        'df_wti_crude_fut',\n",
+    "        'df_natural_gas',\n",
+    "        'df_kospi',\n",
+    "        'df_kosdaq',\n",
+    "        'df_eur_krw',\n",
+    "        'df_usd_krw',\n",
+    "        'df_gold',\n",
+    "        'df_usa_corn',\n",
+    "        'df_nikkei',\n",
+    "        'df_dax',\n",
+    "        'df_moex',\n",
+    "        'df_cac',\n",
+    "        'df_treasury_yield',\n",
     "    ]\n",
     "\n",
     "df_tot.columns = tot_col_nm\n",
     "\n",
-    "df_tot"
+    "df_tot.head()\n",
+    "df_kau19.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split total DataFrame by KAU\n",
+    "df_19 = df_tot.drop(columns=['kau20', 'kau21', 'kau22'])\n",
+    "df_20 = df_tot.drop(columns=['kau19', 'kau21', 'kau22'])\n",
+    "df_21 = df_tot.drop(columns=['kau19', 'kau20', 'kau22'])\n",
+    "df_22 = df_tot.drop(columns=['kau19', 'kau20', 'kau21'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Weekly temporal smoothing\n",
+    "df_19 = df_19.resample('w').mean()\n",
+    "df_20 = df_20.resample('w').mean()\n",
+    "df_21 = df_21.resample('w').mean()\n",
+    "df_22 = df_22.resample('w').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign temporal restricition\n",
+    "df_19 = df_19[(df_19.index > pd.Timestamp('2018-12-31')) & (df_19.index < pd.Timestamp('2021-01-01'))]\n",
+    "df_20 = df_20[(df_20.index > pd.Timestamp('2019-12-31')) & (df_20.index < pd.Timestamp('2022-01-01'))]\n",
+    "df_21 = df_21[(df_21.index > pd.Timestamp('2020-12-31')) & (df_21.index < pd.Timestamp('2023-01-01'))]\n",
+    "df_22 = df_22[(df_22.index > pd.Timestamp('2021-12-31')) & (df_22.index < pd.Timestamp('2024-01-01'))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check temporal restriction and smoothing\n",
+    "df_20"
    ]
   },
   {
@@ -251,16 +339,26 @@
    "outputs": [],
    "source": [
     "# Check missing value of each column and drop missing\n",
-    "msno.matrix(df_tot, figsize=(12, 6))\n",
-    "print('Missing value before drop and fill na\\n', df_tot.isnull().sum())\n",
+    "def fill_missing_and_visualize(df: pd.DataFrame, df_nm=None, visualize=True) -> pd.DataFrame:\n",
+    "    df_fill = df.interpolate(limit_are='outside', limit=10)\n",
+    "    df_fill_n_drop = df_fill.dropna()\n",
     "\n",
-    "df_tot_f = df_tot.interpolate(limit_are='outside', limit=10)\n",
-    "msno.matrix(df_tot_f, figsize=(12, 6))\n",
-    "print('Missing value After fill na\\n', df_tot_f.isnull().sum())\n",
+    "    if visualize:\n",
+    "        ax_raw = msno.matrix(df, figsize=(12, 6))\n",
+    "        ax_raw.set_title(f'[{df_nm}] Missing value before drop and fill na', fontsize=20)\n",
     "\n",
-    "df_tot_f = df_tot_f.dropna()\n",
-    "msno.matrix(df_tot_f, figsize=(12, 6))\n",
-    "print('Missing value After fill and drop na\\n', df_tot_f.isnull().sum())"
+    "        ax_fill = msno.matrix(df_fill, figsize=(12, 6))\n",
+    "        ax_fill.set_title(f'[{df_nm}] Missing value After fill na', fontsize=20)\n",
+    "\n",
+    "        ax_fill_n_drop = msno.matrix(df_fill_n_drop, figsize=(12, 6))\n",
+    "        ax_fill_n_drop.set_title(f'[{df_nm}]Missing value After fill and drop na', fontsize=20)\n",
+    "\n",
+    "    return df_fill_n_drop\n",
+    "\n",
+    "df_19 = fill_missing_and_visualize(df_19, 'KAU-19')\n",
+    "df_20 = fill_missing_and_visualize(df_20, 'KAU-20')\n",
+    "df_21 = fill_missing_and_visualize(df_21, 'KAU-21')\n",
+    "df_22 = fill_missing_and_visualize(df_22, 'KAU-22')"
    ]
   },
   {
@@ -270,13 +368,17 @@
    "outputs": [],
    "source": [
     "# plot - Check data by simple line plot\n",
-    "num_col = len(df_tot_f.columns)\n",
+    "def viz_line_by_col(df):\n",
+    "    num_col = len(df.columns)\n",
     "\n",
-    "df_tot_f.plot(\n",
-    "    subplots=True, \n",
-    "    layout=(int(np.ceil(num_col*2/3)), int(np.ceil(num_col*1/3))),\n",
-    "    figsize=(5*int(np.ceil(num_col*2/3)), 8*int(np.ceil(num_col*1/3))),\n",
-    "    )"
+    "    df.plot(\n",
+    "        subplots=True, \n",
+    "        layout=(int(np.ceil(num_col*2/3)), int(np.ceil(num_col*1/3))),\n",
+    "        figsize=(2*int(np.ceil(num_col*2/3)), 4*int(np.ceil(num_col*1/3))),\n",
+    "        )\n",
+    "\n",
+    "for df in [df_19, df_20, df_21, df_22]:\n",
+    "    viz_line_by_col(df)"
    ]
   },
   {
@@ -285,12 +387,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test - adf and kpss test\n",
-    "x_test = np.cos(np.linspace(0, 100/np.pi, 500)) \n",
-    "x_test2 = df_carbon_credit['종가']\n",
-    "plt.plot(x)\n",
-    "print(f'ADF {adfuller(x_test)}')\n",
-    "print(f'KPSS {kpss(x_test)}')"
+    "# plot - Log transformation for scaling and visualization\n",
+    "def log_transform_n_viz(df, visualize=True):\n",
+    "    df_log_transformed = df.applymap(np.log)\n",
+    "    num_col = len(df_log_transformed.columns)\n",
+    "\n",
+    "    if visualize:\n",
+    "        df_log_transformed.plot(\n",
+    "        subplots=True, \n",
+    "        layout=(int(np.ceil(num_col*2/3)), int(np.ceil(num_col*1/3))),\n",
+    "        figsize=(2*int(np.ceil(num_col*2/3)), 4*int(np.ceil(num_col*1/3))),\n",
+    "        )\n",
+    "    \n",
+    "    return df_log_transformed\n",
+    "\n",
+    "df_19 = log_transform_n_viz(df_19)\n",
+    "df_20 = log_transform_n_viz(df_20)\n",
+    "df_21 = log_transform_n_viz(df_21)\n",
+    "df_22 = log_transform_n_viz(df_22)"
    ]
   },
   {
@@ -300,21 +414,37 @@
    "outputs": [],
    "source": [
     "# plot - visualize each time series data by lab plot and stationarity test\n",
-    "fig_lag_plot, ax_lag_plot = plt.subplots(len(tot_col_nm), 2, figsize=(14, 7*len(tot_col_nm)))\n",
+    "def viz_stationarity_check(df:pd.DataFrame):\n",
+    "    fig_lag_plot, ax_lag_plot = plt.subplots(len(df.columns), 2, figsize=(10, 5*len(tot_col_nm)))\n",
     "\n",
-    "for idx, col_nm in enumerate(tot_col_nm):\n",
-    "    \n",
-    "    pd.plotting.lag_plot(df_tot_f[col_nm].dropna(), ax=ax_lag_plot[idx, 0])\n",
-    "    r_adf = adfuller(df_tot_f[col_nm].dropna())\n",
-    "    r_kpss = kpss(df_tot_f[col_nm].dropna())\n",
-    "    ax_lag_plot[idx, 0].set_title(f'{col_nm} || No diff\\nADF[{r_adf[1]:.2}] || KPSS [{r_kpss[1]:.2}]', fontsize=15, family='bold')\n",
+    "    for idx, col_nm in enumerate(df.columns):\n",
+    "        \n",
+    "        pd.plotting.lag_plot(df[col_nm].dropna(), ax=ax_lag_plot[idx, 0])\n",
+    "        r_adf = adfuller(df[col_nm].dropna())\n",
+    "        r_kpss = kpss(df[col_nm].dropna())\n",
+    "        if any([r_adf[1] >= 0.05, r_kpss[1] < 0.05]):\n",
+    "            diff0_stationarity = 'Non-Stationary'\n",
+    "        else:\n",
+    "            diff0_stationarity = 'Stationary'\n",
+    "        ax_lag_plot[idx, 0].set_title(\n",
+    "            f'{col_nm} || No diff\\nADF[{r_adf[1]:.2}] || KPSS [{r_kpss[1]:.2}]\\n[{diff0_stationarity}]',\n",
+    "        fontsize=15, family='bold')\n",
     "\n",
-    "    pd.plotting.lag_plot(df_tot_f[col_nm].diff().dropna(), ax=ax_lag_plot[idx, 1])\n",
-    "    r_adf = adfuller(df_tot_f[col_nm].diff().dropna())\n",
-    "    r_kpss = kpss(df_tot_f[col_nm].diff().dropna())\n",
-    "    ax_lag_plot[idx, 1].set_title(f'{col_nm} || Diff 1\\nADF[{r_adf[1]:.2}] || KPSS [{r_kpss[1]:.2}]', fontsize=15, family='bold')\n",
+    "        pd.plotting.lag_plot(df[col_nm].diff().dropna(), ax=ax_lag_plot[idx, 1])\n",
+    "        r_adf = adfuller(df[col_nm].diff().dropna())\n",
+    "        r_kpss = kpss(df[col_nm].diff().dropna())\n",
+    "        if any([r_adf[1] < 0.05, r_kpss[1] >= 0.05]):\n",
+    "            diff1_stationarity = 'Stationary'\n",
+    "        else:\n",
+    "            diff1_stationarity = 'Non-Stationary'\n",
+    "        ax_lag_plot[idx, 1].set_title(\n",
+    "            f'{col_nm} || Diff 1\\nADF[{r_adf[1]:.2}] || KPSS [{r_kpss[1]:.2}]\\n[{diff1_stationarity}]', \n",
+    "        fontsize=15, family='bold')\n",
     "\n",
-    "fig_lag_plot.tight_layout()"
+    "    fig_lag_plot.tight_layout()\n",
+    "\n",
+    "for df in [df_19, df_20, df_21, df_22]:\n",
+    "    viz_stationarity_check(df)"
    ]
   },
   {
@@ -324,9 +454,10 @@
    "outputs": [],
    "source": [
     "# Difference total DataFrame\n",
-    "df_tot_f.info()\n",
-    "df_tot_f_diff = df_tot_f.diff().dropna()\n",
-    "df_tot_f_diff.info()"
+    "df_19 = df_19.diff().dropna()\n",
+    "df_20 = df_20.diff().dropna()\n",
+    "df_21 = df_21.diff().dropna()\n",
+    "df_22 = df_22.diff().dropna()"
    ]
   },
   {
@@ -336,13 +467,8 @@
    "outputs": [],
    "source": [
     "# plot - Check data by simple line plot\n",
-    "num_col = len(df_tot_f_diff.columns)\n",
-    "\n",
-    "df_tot_f_diff.plot(\n",
-    "    subplots=True, \n",
-    "    layout=(int(np.ceil(num_col*2/3)), int(np.ceil(num_col*1/3))),\n",
-    "    figsize=(5*int(np.ceil(num_col*2/3)), 8*int(np.ceil(num_col*1/3))),\n",
-    "    )\n"
+    "for df in [df_19, df_20, df_21, df_22]:\n",
+    "    viz_line_by_col(df)"
    ]
   },
   {
@@ -358,7 +484,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tot_f_diff.to_csv('data/preprocessed_data.csv')"
+    "dfs = [df_19, df_20, df_21, df_22]\n",
+    "df_nms = ['kau19', 'kau20', 'kau21', 'kau22']\n",
+    "\n",
+    "for df, df_nm in zip(dfs, df_nms):\n",
+    "    df.to_csv(f'data/preprocessed/{df_nm}.csv')"
    ]
   }
  ],
