[feat] Update EDA (feature name change)
Feature name change
Ex)'df_gold' -> 'gold'

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -261,20 +261,20 @@
     "        'kau20',\n",
     "        'kau21',\n",
     "        'kau22',\n",
-    "        'df_brent_crude_fut',\n",
-    "        'df_wti_crude_fut',\n",
-    "        'df_natural_gas',\n",
-    "        'df_kospi',\n",
-    "        'df_kosdaq',\n",
-    "        'df_eur_krw',\n",
-    "        'df_usd_krw',\n",
-    "        'df_gold',\n",
-    "        'df_usa_corn',\n",
-    "        'df_nikkei',\n",
-    "        'df_dax',\n",
-    "        'df_moex',\n",
-    "        'df_cac',\n",
-    "        'df_treasury_yield',\n",
+    "        'brent_crude_fut',\n",
+    "        'wti_crude_fut',\n",
+    "        'natural_gas',\n",
+    "        'kospi',\n",
+    "        'kosdaq',\n",
+    "        'eur_krw',\n",
+    "        'usd_krw',\n",
+    "        'gold',\n",
+    "        'usa_corn',\n",
+    "        'nikkei',\n",
+    "        'dax',\n",
+    "        'moex',\n",
+    "        'cac',\n",
+    "        'treasury_yield',\n",
     "    ]\n",
     "\n",
     "df_tot.columns = tot_col_nm\n",
